--- a/Jean/Jean.html
+++ b/Jean/Jean.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portopolio_together</title>
+    <link rel="stylesheet" href="stayle.css">
 </head>
 <body>
     <header>
@@ -21,6 +22,9 @@
         <p>
             Halo! Saya seorang pelajar yang menduduki kelas 10 RPL, dan yaa saya sukaa dengannn mengoding kodingan yaa walaupun sedikit pusing tapi saya suka.
         </p>
+        <div class="about-image">
+    <img src="jean cantikk.jpg" alt="Foto tentang saya">
+  </div>
 
     </section>
     <section id="skills" class="section soft-bg">
@@ -31,6 +35,36 @@
             <span>JavaScript</span>
         </div>
     </section>
-    
+     <section id="projects" class="section">
+        <h2>Proyek</h2>
+        <div class="projects">
+            <div class="card">
+                <h3>Website Login</h3>
+                <p>Halaman login dengan desain pastel dan animasi soft.</p>
+            </div>
+            <div class="card">
+                <h3>Website portopolio</h3>
+                <p>Membuat bio data kita dengan  HTML, CSS, dan JavaScript.</p>
+            </div>
+            <div class="card">
+                <h3>Website Portfolio</h3>
+                <p>Portfolio pribadi dengan tampilan modern dan responsif.</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="section soft-bg">
+        <h2>Kontak</h2>
+        <form>
+            <input type="text" placeholder="Nama" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Pesan" required></textarea>
+            <button type="submit">Kirim Pesan</button>
+        </form>
+    </section>
+    <footer>
+        <p>© 2026 Jean_frhn👀. All rights reserved.</p>
+    </footer>
+
+
 </body>
 </html>
