--- a/Jean/Jean.html
+++ b/Jean/Jean.html
@@ -11,14 +11,14 @@
         <h1>Jean Permata🎀</h1>
         <p>information about me</p>
         <nav>
-            <a href="#about">Tentang saya</a>
+            <a href="#about">Tentang me</a>
             <a href="#skills">Skill</a>
-            <a href="#projects">Proyek</a>
+            <a href="#biodata">me</a>
             <a href="#contact">Kontak</a>
         </nav>
     </header>
     <section id="about" class="section">
-        <h2>Tentang saya</h2>
+        <h2>Tentang me</h2>
         <p>
             Halo! Saya seorang pelajar yang menduduki kelas 10 RPL, dan yaa saya sukaa dengannn mengoding kodingan yaa walaupun sedikit pusing tapi saya suka.
         </p>
@@ -35,9 +35,9 @@
             <span>JavaScript</span>
         </div>
     </section>
-     <section id="projects" class="section">
-        <h2>Proyek</h2>
-        <div class="projects">
+     <section id="biodata" class="section">
+        <h2>me</h2>
+        <div class="biodata">
             <div class="card">
                 <h3>Website Login</h3>
                 <p>Halaman login dengan desain pastel dan animasi soft.</p>
