--- a/Jean/Jean.html
+++ b/Jean/Jean.html
@@ -39,12 +39,21 @@
         <h2>me</h2>
         <div class="biodata">
             <div class="card">
-                <h3>Website Login</h3>
-                <p>Halaman login dengan desain pastel dan animasi soft.</p>
+                <h3>Setatus me</h3>
+                <p>perkenal kan nama saya jean permata anggraini. 
+                   saya berumur 15 thn dan saya bersekolah di SMK riyadhul ulum ujung batu.
+                </p>
             </div>
             <div class="card">
-                <h3>Website portopolio</h3>
-                <p>Membuat bio data kita dengan  HTML, CSS, dan JavaScript.</p>
+                <h3>Skill me</h3>
+                <p>Saya suka membuat kodingan dengan menggunakan html,css dan JavaScript dan yaa sekarang saya lagi membuat biodata sya sendiri menggunakan html,css dan JavaScript.</p>
+                <div class="card-image">
+                    <img src="codingan.JPG" alt="poto me">
+                    <img src="pol.JPG" alt="poto me">
+                    <img src="cntk.JPG" alt="poto me">
+                    <img src="pink.JPG" alt="poto saya">
+
+                </div>
             </div>
             <div class="card">
                 <h3>Website Portfolio</h3>
