menambah kan emot

--- a/Jean.html
+++ b/Jean.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <section id="about" class="section">
-        <h2>Tentang me</h2>
+        <h2>Tentang me 🍰</h2>
         <p>
             Halo! Saya seorang pelajar yang menduduki kelas 10 RPL, dan yaa saya sukaa dengannn mengoding kodingan yaa walaupun sedikit pusing tapi saya suka.
         </p>
@@ -28,7 +28,7 @@
 
     </section>
     <section id="skills" class="section soft-bg">
-        <h2>Skill</h2>
+        <h2>Skill ݁ ˖Ი𐑼⋆</h2>
         <div class="skills">
             <span>HTML</span>
             <span>CSS</span>
