--- a/riska/riska.html
+++ b/riska/riska.html
@@ -24,8 +24,8 @@
   <section class="glass reveal">
   <h2>About Me 👑</h2>
   <p>
-    singkat ajaa yaa (...). wkkkwkkkw okk, maap kalo ga jelas, kan yg jelas
-    my love for you💕 eakkk, canda kids.
+    hii, kenalin aku riska, sekarang aku duduk di kelas 10, dan aku bersekolah di smk riyadhul ulum
+     ujung batu. 
   </p>
   </section>
 
@@ -83,7 +83,7 @@
 
 <div class="popup" id="popup">
   <div class="popup-box">
-    <h2>Welcome Gaiss 👑</h2>
+    <h2>hii friendd!👑</h2>
     <p>Welcome to my portofolio riskaa 💕</p>
     <button onclick="closePopup()">clikkk 💗</button>
   </div>
